# spring-2026-final-project-team_021

./: .env.example  README.md  milestone2_architecture_risks.md  milestone_3_update.md  paper.md  paper_final.md  paper_start_from_model.md  project_proposal.md  pyproject.toml  requirements.txt  update.qmd
data/: README.md
data/cache/: search_terms_cache.json
data/reference/: lm_lexicon.json
docs/: index.html
docs/backtest/: chart.html
outputs/: poster.html
outputs/backtest/: README.md  chart.html  results.json  summary.txt
outputs/demo_site/: index.html
outputs/portfolio_judge/: 2025-08-03.json  2025-08-10.json  2025-08-17.json  2025-08-24.json  2025-08-31.json  2025-09-07.json  2025-09-14.json  2025-09-21.json  2025-09-28.json  2025-10-05.json  2025-10-12.json  2025-10-19.json  2025-10-26.json  2025-11-02.json  2025-11-09.json  2025-11-16.json  2025-11-23.json  2025-11-30.json  2025-12-07.json  2025-12-14.json  2025-12-21.json  2025-12-28.json  2026-01-04.json  2026-01-11.json  2026-01-18.json  2026-01-25.json  2026-02-01.json  2026-02-08.json  2026-02-15.json  2026-02-22.json  2026-03-01.json  2026-03-08.json  2026-03-15.json  2026-03-22.json  2026-03-29.json  2026-04-05.json  README.md
outputs/risk_management/: 2025-08-03.json  2025-08-10.json  2025-08-17.json  2025-08-24.json  2025-08-31.json  2025-09-07.json  2025-09-14.json  2025-09-21.json  2025-09-28.json  2025-10-05.json  2025-10-12.json  2025-10-19.json  2025-10-26.json  2025-11-02.json  2025-11-09.json  2025-11-16.json  2025-11-23.json  2025-11-30.json  2025-12-07.json  2025-12-14.json  2025-12-21.json  2025-12-28.json  2026-01-04.json  2026-01-11.json  2026-01-18.json  (+12 more)
(+938 files in other folders)
